[gd_scene load_steps=11 format=2]

[ext_resource path="res://_old/objects/player/player.gd" type="Script" id=1]
[ext_resource path="res://spy-vs-spy-remaster/sprites/spritesheet.png" type="Texture" id=2]
[ext_resource path="res://_old/objects/player/sprite.gd" type="Script" id=3]
[ext_resource path="res://spy-vs-spy-remaster/scripts/state_machine/state_machine.gd" type="Script" id=4]
[ext_resource path="res://_old/tools/state_machine/sprite_animation_state.gd" type="Script" id=5]
[ext_resource path="res://_old/objects/player/interact.gd" type="Script" id=6]
[ext_resource path="res://_old/objects/player/interact_door.gd" type="Script" id=7]
[ext_resource path="res://_old/objects/player/inventory.gd" type="Script" id=8]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.05327, 17.2986 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.52654
height = 0.0

[node name="player" type="KinematicBody2D" groups=[
"can_interact",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2, 2, 20, 34 )
script = ExtResource( 3 )

[node name="state_machine" type="Node" parent="sprite"]
script = ExtResource( 4 )
state_map = [ "idle_down", "walk_down" ]

[node name="idle_down" type="Node" parent="sprite/state_machine"]
script = ExtResource( 5 )
animation_values = [ Rect2( 2, 2, 20, 34 ) ]

[node name="walk_down" type="Node" parent="sprite/state_machine"]
script = ExtResource( 5 )
animation_values = [ Rect2( 45, 2, 20, 35 ), Rect2( 67, 2, 20, 35 ) ]

[node name="change_sprite_timer" type="Timer" parent="sprite"]
wait_time = 0.2

[node name="interact" type="Area2D" parent="."]
editor/display_folded = true
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact"]
shape = SubResource( 2 )

[node name="interact_door" type="Area2D" parent="."]
editor/display_folded = true
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact_door"]
shape = SubResource( 2 )

[node name="inventory" type="Node" parent="."]
script = ExtResource( 8 )
[connection signal="move" from="." to="interact" method="_on_player_move"]
[connection signal="change_state" from="sprite/state_machine" to="sprite" method="_on_state_machine_change_state"]
[connection signal="timeout" from="sprite/change_sprite_timer" to="sprite" method="_on_change_sprite_timer_timeout"]
[connection signal="area_entered" from="interact" to="interact" method="_on_interact_area_entered"]
[connection signal="area_exited" from="interact" to="interact" method="_on_interact_area_exited"]
[connection signal="item_found_in_interactable" from="interact" to="inventory" method="_on_interact_item_found_in_interactable"]
[connection signal="place_item_in_interactable" from="interact" to="inventory" method="_on_interact_place_item_in_interactable"]
[connection signal="area_entered" from="interact_door" to="interact_door" method="_on_interact_door_area_entered"]
[connection signal="area_exited" from="interact_door" to="interact_door" method="_on_interact_door_area_exited"]
[connection signal="teleport" from="interact_door" to="." method="_on_interact_door_teleport"]
[connection signal="teleport" from="interact_door" to="interact" method="_on_interact_door_teleport"]
[connection signal="item_added_to_inventory" from="inventory" to="." method="_on_inventory_item_added_to_inventory"]
[connection signal="item_removed_from_inventory" from="inventory" to="." method="_on_inventory_item_removed_from_inventory"]
